--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
 
 
 			</div>
+			<video width="50%" controls>
+				<source src="video.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			  </video>
 
 		</div>
 
